--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
     
     <!--qualification section  -->
     <main>
-        <section id="qualification-section">
+        <section id
+        ="qualification-section">
             <h2 class="main-heading">My Qualifications</h2>
             <div class="table-container">
                 <table class="qualification-table">
